Revert "Fix weird spacing in header."
This reverts commit 20ae13e359509505723fcaff596bfede31d3cfa8.

--- a/src/s1/s1/static/stylesheets/scss/components/_button_theme.scss
+++ b/src/s1/s1/static/stylesheets/scss/components/_button_theme.scss
@@ -127,10 +127,12 @@ cta button variant
 }
 
 .button-group {
+    @include clearfix;
     display: inline-block;
-    
+
     .button {
         border-radius: 0;
+        float: left;
 
         &:first-child {
             @include rem(border-radius, 15px 0 0 15px);
